<resources>
    <string name="app_name">PracticalTest01</string>
    <string name="practicaltest01">PracticalTest01</string>
    <string name="_0">0</string>
    <string name="press_me">PRESS ME!</string>
    <string name="press_me_too">PRESS ME, TOO!</string>
    <string name="navigate_to_secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="total_count_0">Total Count: 0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>