<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- BUTON DREPTUNGHIULAR   -->
        <!-- layout_width, layout_height, layout_gravity, layout_margin<...>,
             text, textColor, background -->

    <TextView
        android:id="@+id/totalCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_count_0"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:background="@color/white" />

</LinearLayout>
