<?xml version="1.0" encoding="utf-8"?>
<!-- MEREU LA WITDH SI HEIGHT MATCH_PARENT -->
<!-- STABILIREA ORIENTARII VERTICALE/ORIZONTALE -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- ID FOARTE IMPORTANT PENTRU RECUNOASTERE -->
    <!-- LUNGIMEA SI INALTIMEA DACA VREAU SA AM DIMENSIUNEA CAT ECRANUL DE MARE
         FAC MATCH LA PARINTELE LUI (DEPINDE DE PARINTE) -->

    <!-- MEREU O SA AVEM TEXTVIEW/BUTTON -->
    <!-- LINEARLAYOUT/GRIDLAYOUT IN FUNCTIE DE CUM VREM SA NE ORGANIZAM ELEMENTELE -->

<!--  TEXTVIEW  -->
    <!-- ID, layout_width, layout_height, layout_gravity, text, textSize, textColor,
         gravity, background, padding<Top/Bottom/Left/Right>, saveEnabled -->
<!--  BUTTON  -->
    <!-- ID, layout_width, layout_height, layout_gravity, layout_margin<Top/Bottom/Left/Right>,
        text, textSize, gravity, background DEFINIT IN drawable (sa nu uit sa il copiez) -->
<!--  LINEARLAYOUT DACA VREAU SA GRUPEZ ELEMENTE IMPREUNA DIFERITE,
      IAR TOATE OBIECTELE DIN LAYOUT VOR FI GRUPATE AICI, NU AU NEVOIE DE ID LAYOUT-URILE -->
    <!-- orientation SPUNE DACA VREAU SA LE PUN IN LINIE/COLOANA,
        layout_width, layout_height, layout_gravity,
        layout_weight="1" FOARTE IMPORTANT DACA VREAU SA PUN ELEMENTE PE ACEEASI LINIE/COLOANA TREBUIE
        SA AIBE ACELASI LAYOUT WEIGHT (POATE FI ORICE VALOARE DOAR SA FIE LA FEL) -->

    <TextView
        android:id="@+id/titleTextViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practicaltest01"
        android:textSize="18sp"
        android:gravity="center_vertical|start"
        android:textColor="@color/white"
        android:background="@color/black"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/navigateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_secondary_activity"
        android:layout_gravity="end"
        android:padding="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/counterTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="24sp"
                android:saveEnabled="true"
                android:layout_marginTop="8dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_me"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/button_background"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/counterTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="24sp"
                android:saveEnabled="true"
                android:layout_marginTop="8dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_me_too"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
